<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CVC Frog</string>
    <string name="title">CVC Frog</string>
    <string name="title_activity_main">CVC Frog</string>
    <string name="back_button">back</string>
    <string name="mute_button">Mute</string>
    <string name="a1">Leap into literacy with CVC word frog!  This innovative educational app fosters the development
        of reading foundational skills, specifically phonological awareness.  Freddy Frog is hungry for vowels, and he
        needs your help to identify the correct vowel flies to eat.  Use the consonants and image provided to determine
        the missing vowel and corresponding short vowel sound for each of the CVC words presented.  Hear the consonant
        and missing vowel sounds by tapping on the letters or blank space of the word shown.  Choose the incorrect
        vowel and Freddy will spit the fly right back out.  Choose the correct vowel and celebrate with Freddy as he
        enjoys his lunch, sends up stars, and sings your praises!\n
        \t\t\t\t\tTen exciting levels are sure to keep you hopping.  Each level features faster flies and a shorter
        time allotment for choosing the correct vowel, thus promoting more automatic responses and deeper level learning.
        Each correct answer will earn you a star. Four correct answers are needed to advance but, beware an incorrect
        answer will cost you a star. Play your way into literacy for the 21st century with the CVC word frog educational app.</string>
    <string name="config_music_volume">Music volume</string>
    <string name="config_sound_volume">Sound volume</string>
    <string name="developer">Roy Perdue</string>
    <string name="graphics">Roy Perdue</string>
    <string name="ingamemenu">Do you want to exit the game?</string>
    <string name="ingamemenuSettingsButton">Settings</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="backbutton">backbutton</string>
    <string name="mutebutton">mutebutton</string>
    <string name="graphics_">Graphics:</string>
    <string name="developer_">Developer:</string>
    <string name="settingsbutton">settingsbutton</string>
    <string name="helpbutton">helpbutton</string>
    <string name="exitbutton">exitbutton</string>
    <string name="aboutbutton">aboutbutton</string>
    <string name="playbutton">playbutton</string>
    <string name="fly">fly</string>
    <string name="create">Create</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="audio">Audio</string>
    <!-- License checking status messages -->
    <string name="check_license">Check license</string>
    <string name="checking_license">Checking license...</string>
    <string name="dont_allow">Don\'t allow the user access</string>
    <string name="allow">Allow the user access</string>
    <string name="application_error">Application error: %1$s</string>

    <!-- Unlicensed dialog messages -->
    <string name="unlicensed_dialog_title">Application not licensed</string>
    <string name="unlicensed_dialog_body">This application is not licensed. Please purchase it from Android Market.</string>
    <string name="unlicensed_dialog_retry_body">Unable to validate license. Check to see if a network connection is available.</string>
    <string name="buy_button">Buy app</string>
    <string name="retry_button">Retry</string>
    <string name="quit_button">Exit</string>
    <string name="title_activity_license_check">CVC Frog</string>

</resources>