<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LimeGreen" >

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/backbutton"
        android:src="@drawable/back" />

    <ImageButton
        android:id="@+id/muteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/mutebutton"
        android:src="@drawable/mute" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/muteButton"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="42dp"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_sound_volume"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/sbSoundVolume"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:right="@+id/tvSound" />

        <TextView
            android:id="@+id/tvMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_music_volume"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/sbMusicVolume"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:right="@+id/tvMusic" />
    </LinearLayout>

</RelativeLayout>